--- a/Demo/packages.config
+++ b/Demo/packages.config
@@ -1,19 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="net461" />
-  <package id="Autofac.Owin" version="4.1.0" targetFramework="net461" />
+  <package id="Autofac.Owin" version="4.2.0" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.1.0" targetFramework="net461" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="MediatR" version="4.1.0" targetFramework="net461" />
+  <package id="MediatR.Extensions.Microsoft.DependencyInjection" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
-  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Net.Compilers" version="2.7.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Cors" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
 </packages>
